--- a/book_manager/style.css
+++ b/book_manager/style.css
@@ -1,3 +1,24 @@
+body {
+  background-color: skyblue;
+}
+.seating-image {
+  position: absolute;
+  top: -25px;
+  left: 165px;
+  margin-top: 28px;
+}
+
+.seating-image img {
+  height: 120px;
+}
+.main-page {
+  background-color: white;
+  max-width: fit-content;
+  /* overflow: hidden; */
+  margin: 75px auto;
+  border-radius: 20px;
+}
+
 /* 
 
 styling of the first column
@@ -76,7 +97,7 @@ styling of the first column
 }
 
 .storage-container {
-  margin-top: 150px;
+  margin-top: 120px;
   background-color: rgba(234, 152, 0, 0.86);
   margin-left: 30px;
   margin-right: 30px;
@@ -91,6 +112,8 @@ styling of the first column
 }
 .storage-container p {
   margin: 0px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .progress-bar-container {
@@ -120,7 +143,7 @@ styling of the second column
 */
 
 .middle-section-container {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .search-container {
@@ -145,6 +168,7 @@ styling of the second column
 .project-container {
   margin-left: 30px;
   margin-right: 8px;
+  margin-top: 15px;
 }
 
 .project-container a {
@@ -167,10 +191,10 @@ styling of the second column
 
 .project-folder {
   background-color: #a9a9a929;
-  padding: 15px;
+  padding: 10px;
   border-radius: 10px;
   margin-right: 15px;
-  min-width: 120px;
+  min-width: 100px;
 }
 
 .folder-icon {
@@ -180,14 +204,15 @@ styling of the second column
 
 .project-folder p {
   margin-bottom: 4px;
+  font-size: 0.8rem;
 }
 
 .project-folder div {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .project-folder div span {
-  font-size: 12px;
+  font-size: 10px;
   color: #00000045;
 }
 
@@ -195,12 +220,11 @@ styling of the second column
   display: flex;
   justify-content: center;
   text-align: center;
-  padding: 15px;
   border-radius: 10px;
-  margin-right: 15px;
-  min-width: 120px;
+  width: 120px;
   border: 1px dashed #00000045;
   flex-direction: column;
+  font-size: 0.8rem;
 }
 
 .plus-circle-icon {
@@ -216,12 +240,14 @@ styling of the second column
 .popular-books-container {
   margin-left: 30px;
   margin-right: 10px;
+  margin-top: 40px;
 }
 
 .books-container {
   display: flex;
   justify-content: space-between;
   font-size: 10px;
+  margin-bottom: 15px;
 }
 
 .books-container div > p {
@@ -301,4 +327,123 @@ styling of the second column
   text-align: center;
   padding: 10px 5px;
   text-decoration: none;
+}
+
+/* 
+
+styling of the thrid column 
+
+
+*/
+
+.third-section {
+  margin-left: 30px;
+  margin-top: 20px;
+  max-width: 300px;
+}
+.profile-notification-container {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10px;
+}
+
+.profile-icon-container {
+  align-self: center;
+  padding: 5px;
+  background-color: #2d45ffc7;
+  border-radius: 7px;
+}
+
+.new-notification {
+  padding: 5px;
+  background-color: red;
+  position: absolute;
+  border-radius: 50%;
+  margin-top: -6px;
+  margin-left: 12px;
+}
+
+.bell-icon {
+  color: white;
+}
+
+.profile-details-container {
+  display: flex;
+}
+
+.profile-details-container h5 {
+  margin-right: 15px;
+}
+
+.new-info-container {
+  margin-top: 25px;
+}
+
+.new-info-container p,
+span {
+  color: #4c46465c;
+}
+
+.book-manager-review-container {
+  display: flex;
+}
+
+.review-star {
+  color: #4c46465c;
+}
+
+.review-ruler {
+  width: 20px;
+  margin: auto 10px;
+  border-top: 1px solid;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+}
+
+.beta-version-button {
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-top: 20px;
+}
+
+.illustration {
+  margin-top: 118px;
+  margin-right: -40px;
+}
+
+.illustration-background {
+  width: 100%;
+  height: 300px;
+  background: #ffac1582;
+  border-top-left-radius: 50px;
+}
+
+.illustration-image {
+  height: 500px;
+  width: 290px;
+  margin-left: 30px;
+  margin-top: -156px;
+}
+
+/* 
+
+media query
+
+
+*/
+
+@media (min-width: 769px) and (max-width: 1023px) {
+  .illustration {
+    margin-right: -100px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main-page {
+    display: flex;
+
+    overflow: hidden;
+  }
 }
